@@ -13,4 +13,4 @@ AUTOSTART=Autostart-Datei
 SID_REG_FORMAT=Sound Treiber: SID Register Treiber - Format f\u00fcr SID Register Schreibbefehle
 SFX_SOUND_EXPANDER=SFX Sound Expander [FM-YAM alike] verwenden
 SFX_SOUND_EXPANDER_TYPE=SFX Sound Expander Typ (OPL1: YM3526 = 0, OPL2: YM3812 = 1)
-VIDEO_TUNE_AS_AUDIO=Spiele Tunes, die Bildschirmausgaben verwenden als Audio ab (.c64, .prg, .p00)
+VIDEO_TUNE_AS_AUDIO=Spiele Tunes, die Bildschirmausgaben verwenden, als Audio ab (.c64, .prg, .p00)
