@@ -5,7 +5,13 @@ Support of SFX Sound Expander Cartridge [FM-YAM alike] has been added (YM3526=OP
 Bugfix: PSID64 detection of SID base address fixed
 
 C64 Jukebox:
+(Please force a reload in your browser to refresh my C64Jukebox at: https://haendel.ddns.net:8443/static/c64jukebox.vue
+    MS-Edge browser: Hold the Ctrl key and click the Refresh button
+    Mac-Safari browser: Command+Alt+R
+    Chrome-Browser: Hold the Shift key and click the Refresh button
+    Firefox-Browser: Hold the Shift key and click the Refresh button
+)
 Keyboard interaction reacts much faster, now
 Configuration completely renewed
 Layout enhancements
-Please Shift+Reload page in your browser: https://haendel.ddns.net:8443/static/c64jukebox.vue
+PRG can be configured to play as audio and not as video, now
